# spooles_ffi

./: Cargo.toml  build.rs  commands.txt
.github/workflows/: ci.yml
c_lib/: wrapper.h
src/: lib.rs  spooles_binding.rs
src/tests/: tests.rs
