[package]
name = "spooles_ffi"
version = "0.1.0"
authors = ["Roman Shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2021"
description = "Spooles C library FFI."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"


[build-dependencies]
cc = { version = "1.0.73", features = ["parallel"] }
